--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,13 +5,12 @@
 @import "client";
 @import "contact";
 body {
-  background-color: white;
+   
   overflow-x: hidden;
 }
 
 a {
   text-decoration: none;
-  color: #fff;
   font-family: "Roboto", sans-serif;
   font-size: 19px;
   font-weight: 500;
@@ -44,13 +43,17 @@ a {
 }
 .nav-link2 {
   position: relative;
-  left: 750px;
+  left: 390px;
+
   top: 5px;
   font-weight: 700;
 }
 .exibi {
   display: flex;
-  list-style-type: none;
+  list-style-type: none; 
+}
+.cont{
+  display: flex;
 }
 .exibi li {
   flex: 0 1 20rem;
@@ -60,7 +63,9 @@ a {
   height: 10rem;
   border-top: 0.2rem;
   position: relative;
-  left: 300px;
+  left: 200px;
+ 
+   
 }
 .footer {
   background-color: rgb(32, 32, 32);
@@ -87,7 +92,36 @@ a {
   top: 20px;
   color: white;
 }
+ .sla{
+   position: relative;
+   top:85px;
+ }
+ .sub{
+   position: absolute;
+   bottom:100px;
+   width: 100%;
+ }
 
-.ft {
-  height: 25px;
+ .ImageLogoHead{
+   position: relative;
+   left: 100px;
+ }
+ .nav {
+  padding: .5rem 0;
 }
+
+.nav-item {
+  display: block;
+  font-family: "Roboto", sans-serif;
+  position: relative;
+  left:40px;
+  margin:10px;
+}
+.header__nav {
+  background: #202020;
+}
+ nav-link:hover{
+   color:yellow;
+ }
+
+ 
