--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <% if current_page?(root_path) %>
       <div class="img">
         <img  src="https://bitbucket.org/agencia-w3case/faixabranca/raw/fc9ca933c4232d459f4a3001f624401bb6f8db56/app/assets/images/header-bg%20no-edit.jpg" class="img-fluid" alt="Responsive image">
-      </div>
+     </div>
     <% else %>
       <div class="logo">
         <a class="log" href="/"><img src="https://bitbucket.org/agencia-w3case/faixabranca/raw/fc9ca933c4232d459f4a3001f624401bb6f8db56/app/assets/images/logo-white.svg"  class="img-fluidy" alt="Responsive image"></a>
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="company">Empresa</a>
@@ -67,7 +67,7 @@
         <div class="copy">
           <small class="footer__small"> © 2021 - TODOS OS DIREITOS RESERVADOS. </small>
           <div class="sla" >
-            <p class="autor">DESENVOLVIDO POR: </p>
+            <!--<p class="autor">DESENVOLVIDO POR: </p>-->
             <a class="link" href="https://www.agenciaw3.digital/">
               <img class="ft" src="https://bitbucket.org/agencia-w3case/faixabranca/raw/fc9ca933c4232d459f4a3001f624401bb6f8db56/app/assets/images/logo_w3.svg" alt="Logo w3">
             </a>
