--- a/app/views/service/index.html.erb
+++ b/app/views/service/index.html.erb
@@ -1,6 +1,6 @@
 <div class="bac">
   <h3 class="tit">SERVIÇOS</h3>
-  <h6 class="sub">CONHEÇA ALGUNS DE NOSSOS SERVIÇOS</h6>
+  <h6 style = "margin-top: 30px">CONHEÇA ALGUNS DE NOSSOS SERVIÇOS</h6>
   <ul class="list">
     <% @service.each  do |item| %>
       <li>
