--- a/app/assets/stylesheets/company.scss
+++ b/app/assets/stylesheets/company.scss
@@ -4,6 +4,9 @@ body {
     margin: 35px;
   }
 }
+body{
+  background-color: #11111110;
+}
 
 .f {
   color: #c7783e;
@@ -17,11 +20,11 @@ body {
   text-transform: uppercase;
   font-weight: 300;
   position: relative;
-  left: 550px;
+  text-align: center;
 }
 p {
   text-align: justify;
   margin: 32px;
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
-}
+ }
