--- a/app/assets/stylesheets/service.scss
+++ b/app/assets/stylesheets/service.scss
@@ -1,3 +1,13 @@
+h6 {
+  margin-top:30px;
+  color: #919191;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 300;
+  position: relative;
+
+}
+
 .bac {
   background-color: rgba(17, 17, 17, 0.05);
   align-content: center;
@@ -12,15 +22,7 @@
   font-weight: 700;
   font-style: bold;
 }
-.sub {
-  color: #919191;
-  text-align: center;
-  font-size: 20px;
-  font-weight: 300;
-  margin: 40px;
-}
 .titleSe {
-  color: black;
   font-size: 20px;
   font-weight: 700;
   position: relative;
